# paperclip

./: .gitignore  AGENTS.md  everpretty_ai_company_architecture.md  pnpm-lock.yaml  vitest.config.ts
doc/: RELEASING.md
docs/: architecture-overview.mmd  ever-pretty-architecture.mmd  ever-pretty-pitch.md
launchd/: com.everpretty.paperclip-dev.plist  com.everpretty.paperclip-lmstudio-rag-models.plist  com.everpretty.paperclip-rag-ingest.plist  com.everpretty.paperclip-rag-service.plist  com.everpretty.paperclip-rag-weekly-report.plist  install.sh  (+1 more)
services/rag/: .env.example  README.md  pyproject.toml
services/rag/scripts/: bu_return_rate_forecast.py  bu_style_return_rate_forecast.py  cron_ingest.sh  drain_v3.py  ensure_lmstudio_rag_models.sh  eval_search.py  inspect_kg.py  run_dev.sh  site_style_tag.json  site_warehouse_map.json  test_e2e.py  weekly_report.sh  weekly_return_report.py  weekly_site_report.sh  weekly_site_return_report.py
services/rag/src/paperclip_rag/: api.py  config.py  lightrag_factory.py  lm_studio.py  logging_setup.py  manifest.py  query_translator.py  schemas.py
services/rag/src/paperclip_rag/ingest/: decisions.py  refund_comments.py  refund_comments_all.py
services/rag/tests/: conftest.py  test_api.py  test_config.py  test_ingest_refund_comments.py  test_ingest_refund_comments_all.py  test_lightrag_factory.py  test_lm_studio.py  test_logging_setup.py  test_manifest.py  test_query_translator.py  test_query_translator_prompt.py  test_schemas.py  test_startup_dim_probe.py  test_weekly_return_report.py  test_weekly_site_return_report.py
(+127 files in other folders)
