[project]
name = "paperclip-rag"
version = "0.1.0"
description = "Local RAG service for paperclip business knowledge (LightRAG + LM Studio)"
requires-python = ">=3.11"
dependencies = [
    "lightrag-hku>=1.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "openai>=1.50.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "loguru>=0.7.2",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "networkx>=3.3",
    "tenacity>=9.0.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.32.0",
    "respx>=0.21.1",
]
mysql = [
    "pymysql>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paperclip_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: requires live LM Studio at 127.0.0.1:1234",
]
